fix bug that make blocks disappear when rotating at top of grid; fix bug causes other pieces to disappear when rotating pieces nearby; fix bug that makes block shift to top of stack when rotating below other pieces

--- a/styles.css
+++ b/styles.css
@@ -88,3 +88,8 @@ body {
     height: 20px;
     width: 20px;
 }
+
+.hidden {
+    opacity: 0;
+    position: fixed;
+}
